pagination and  mobile version

--- a/client/src/components/Films-List/Films-List.scss
+++ b/client/src/components/Films-List/Films-List.scss
@@ -7,3 +7,9 @@
   align-self: flex-start;
   justify-content: space-around;
 }
+
+@media (max-width: 600px) {
+  .film-list-wrapper {
+    padding: 0;
+  }
+}
