--- a/client/src/components/Burger/Burger.scss
+++ b/client/src/components/Burger/Burger.scss
@@ -1,16 +1,17 @@
 .burger {
   width: 80px;
   height: 80px;
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  top: -15px;
-  right: -25px;
+  top: -10px;
+  right: -10px;
   cursor: pointer;
   border: none;
   transform: scale(0.4);
+  z-index: 20;
 }
 
 .stick {
