--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,3 +39,17 @@ a:visited {
   padding: 30px 40px;
   position: relative;
 }
+
+.mobile {
+  top: 80px;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  .main {
+    padding: 0;
+  }
+}
