--- a/client/src/components/Films-List/Films-List.scss
+++ b/client/src/components/Films-List/Films-List.scss
@@ -3,13 +3,26 @@
   flex-wrap: wrap;
   gap: 20px;
   height: 100%;
+  width: 100%;
   padding: 0 50px;
   align-self: flex-start;
-  justify-content: space-around;
+  justify-content: flex-start;
+
+  .films-empty-error {
+    margin: 30% auto;
+    font-size: 5rem;
+    font-family: 'SF Pro Display', sans-serif;
+  }
 }
 
 @media (max-width: 600px) {
   .film-list-wrapper {
-    padding: 0;
+    padding-bottom: 2rem;
+    justify-content: center;
+
+    .films-empty-error {
+      font-size: 4rem;
+      text-align: center;
+    }
   }
 }
