--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -5,7 +5,6 @@
   width: 100%;
   z-index: 10;
 
-
   .nav-wrapper {
     display: flex;
     justify-content: space-between;
@@ -21,7 +20,7 @@
       font-size: 2rem;
     }
 
-    button {
+    .nav-btn {
       color: #ffffff;
       font-size: 20px;
       border: none;
