change popup style and location

--- a/client/src/components/Film-Card/Film-Card.scss
+++ b/client/src/components/Film-Card/Film-Card.scss
@@ -52,6 +52,7 @@
         border: none;
         position: relative;
         top: -4px;
+        text-align: center;
 
         img {
           height: inherit;
@@ -66,6 +67,7 @@
         position: relative;
         top: -4px;
         border: none;
+        text-align: center;
 
         img {
           width: inherit;
