--- a/client/src/components/autorization-popup/authorization-popup.scss
+++ b/client/src/components/autorization-popup/authorization-popup.scss
@@ -1,22 +1,31 @@
 .auth-popup {
-  width: 250px;
-  height: 250px;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.4);
   position: fixed;
-  background: #000000;
+  z-index: 10;
+}
+
+.auth__content {
+  background: rgba(1, 13, 30, 0.85);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  top: 20px;
-  right: 100px;
   gap: 20px;
+  font-family: Roboto, sans-serif;
 
   .auth-header {
     height: 20%;
     display: flex;
     color: white;
     width: 100%;
+    gap: 10rem;
     justify-content: space-between;
+    user-select: none;
 
     button {
       padding: 5px;
@@ -31,6 +40,8 @@
       align-items: center;
       color: white;
       transition-duration: 0.3s;
+      border: none;
+      border-radius: 5px;
 
       &:hover {
         background: white;
@@ -43,28 +54,41 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 25px;
     height: 80%;
+    justify-content: space-between;
+    gap: 5px;
+
+    label {
+      color: white;
+      font-size: 16px;
+      text-align: left;
+      user-select: none;
+    }
 
     input {
       outline: none;
-      border: none;
-      padding: 5px;
+      border: 1px solid white;
+      padding: 8px;
       width: 100%;
-      background: white;
+      background: none;
+      margin-bottom: 10px;
+      color: white;
+      font-size: 16px;
     }
 
     .form-button {
+      //margin-top: 20px;
       width: 100px;
-      height: 30px;
+      height: 40px;
       padding: 5px;
       color: black;
       text-align: center;
-      font-size: 14px;
+      font-size: 16px;
       border: none;
-      border-radius: 15px;
+      border-radius: 12px;
       overflow: hidden;
       background: white;
+      user-select: none;
     }
   }
 }
