--- a/client/src/components/Detail-Film-Card/Detail-FIlm-Card.scss
+++ b/client/src/components/Detail-Film-Card/Detail-FIlm-Card.scss
@@ -18,13 +18,12 @@
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: center;
+        padding: 0 2rem;
+        justify-content: space-around;
         align-items: center;
         background-color: rgba(2, 8, 33, 0.4);
 
         .top__poster {
-          height: 100%;
-
           img {
             transform: scale(0.6);
           }
@@ -48,6 +47,7 @@
           p {
             font-size: 1.6rem;
             margin-bottom: 1rem;
+            word-break: break-word;
           }
         }
       }
