--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -16,9 +16,15 @@
         padding: 0 15%;
         font-family: Roboto, sans-serif;
 
-        a {
-            color: #ffffff;
-            font-size: 2rem;
+        .header-links {
+            display: flex;
+            justify-content: space-between;
+            min-width: 35%;
+
+            a {
+                color: #ffffff;
+                font-size: 2rem;
+            }
         }
 
         .nav-btn {
