--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -13,7 +13,7 @@
         text-align: center;
         height: inherit;
         width: 100%;
-        padding: 0 15%;
+        padding: 0 13% 0 5%;
         font-family: Roboto, sans-serif;
 
         .header-links {
@@ -41,7 +41,6 @@
 
 @media (max-width: 600px) {
     .header-nav {
-        position: fixed;
         top: 0;
         padding: 0;
 
